Fixed contrast errors

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
     /* --link:#7325d9; */
     --link: rgb(153, 0, 255);
     --link-hover: hotpink;
-    --link-visited:rgb(107, 0, 128);
+    --link-visited:rgb(128, 0, 75);
     --link-active:#d925ca;
 
 }
